add closest-thera-entrance endpoint
